test/log/reduction/vrmax_v_i32_m.txt
vrmax_v_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrmax_v_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrmax_v_i32_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vrmax_v_i32_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vrmax_v_i32_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vrmax_v_i32_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vrmax_v_i32_m.c:22:6: warning: no previous prototype for 'vrmax_v_i32_m_golden' [-Wmissing-prototypes]
   22 | void vrmax_v_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vrmax_v_i32_m.c: In function 'vrmax_v_i32_m_golden':
vrmax_v_i32_m.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vrmax_v_i32_m.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vrmax_v_i32_m.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vrmax_v_i32_m.c:22:36: warning: unused parameter 'mask' [-Wunused-parameter]
   22 | void vrmax_v_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                           ~~~~~~~~~^~~~
vrmax_v_i32_m.c:22:50: warning: unused parameter 'maskoff' [-Wunused-parameter]
   22 | void vrmax_v_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                         ~~~~~~~~~^~~~~~~
vrmax_v_i32_m.c:22:67: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vrmax_v_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                                          ~~~~~~~~~^
vrmax_v_i32_m.c:22:78: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vrmax_v_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                                                                     ~~~~~~~~~^~~~~~~~~~
vrmax_v_i32_m.c: In function 'main':
vrmax_v_i32_m.c:40:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   40 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrmax_v_i32_m.c:45:26: error: incompatible type for argument 1 of 'vrmax_v_i32_m_golden'
   45 |     vrmax_v_i32_m_golden(exp_mask,exp_maskoff,exp_a,exp_result);
      |                          ^~~~~~~~
      |                          |
      |                          uint64_t * {aka long long unsigned int *}
vrmax_v_i32_m.c:22:36: note: expected 'bool16_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vrmax_v_i32_m_golden(bool16_t mask,int32_t *maskoff,int32_t *a,int32_t *exp_result) {
      |                           ~~~~~~~~~^~~~
vrmax_v_i32_m.c:48:28: error: incompatible type for argument 1 of 'vrmax_v_i32_m'
   48 |     result = vrmax_v_i32_m(mask,maskoff,a);
      |                            ^~~~
      |                            |
      |                            bool16_t
In file included from vrmax_v_i32_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1936:1: note: expected 'bool16x2_t' but argument is of type 'bool16_t'
 1936 | __RUGRATS_REDUC_V_OP (rmax, i, int, 32, 16)
      | ^~~~~~~~~~~~~~~~~~~~
vrmax_v_i32_m.c:53:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   53 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmax_v_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrmax_v_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrmax_v_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmax_v_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed